# bridges-alpha-api

./: README.md  pyproject.toml
bridges/: __main__.py
bridges/app/: boot.py  router.py  schema.py  settings.py
bridges/data/: account_repository.py  auth_repository.py  transaction_repository.py
bridges/domain/: dto.py  entity.py  usecase.py
