[tool.poetry]
name = "bridges-alpha-api"
version = "0.1.0"
description = ""
authors = ["iRaySpace"]
readme = "README.md"
packages = [{include = "bridges_alpha_api"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
