[tool.poetry]
name = "bridges-alpha-api"
version = "0.1.0"
description = ""
authors = ["iRaySpace"]
readme = "README.md"
packages = [{include = "bridges_alpha_api"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
supabase = "^1.0.3"
uuid = "^1.30"
python-ulid = "^1.1.0"
pytz = "^2023.3"
pyjwt = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
